@@ -2766,8 +2766,6 @@ genCmp (const iCode *ic, iCode *ifx)
     {
       if (ic->op == '>' && right->aop->type == AOP_LIT)
         {
-          wassert (!aopIsLitVal (right->aop, 0, 1, 0x00));
-          
           if (IC_TRUE (ifx))
             {
               emit2 ("ceqsn", "a, #0x%02x", byteOfVal (right->aop->aopu.aop_lit, 0) + 1);
