@@ -1,3 +1,9 @@
+2024-03-23 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCgenconstprop.cc,
+	  src/pdk/gen.c:
+	  Improve generalized constant propagation analysis accuracy.
+
 2024-03-18 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/z80/ralloc2.cc:
